Show categories from model in index page

--- a/face/templates/face/index.html
+++ b/face/templates/face/index.html
@@ -71,7 +71,7 @@
                     <ul id="works_filter">
                         <li><a href="#" data-filter="*" class="selected">Показать все</a></li>
                         {% for category in categories %}
-                            <li><a href="#" data-filter="{{ category.slug }}">{{ category.name }}</a></li>
+                            <li><a href="#" data-filter="{{ category.tech_name }}">{{ category.name }}</a></li>
                         {% endfor %}
                     </ul>
                     <div class="clear"></div>
