--- a/face/templates/face/index.html
+++ b/face/templates/face/index.html
@@ -79,7 +79,7 @@
                     <div id="gal" class="no-touch">
                         <div class="wrap">
                             {% for item in items %}
-                                <div class="box {{ item.get_categories }}">
+                                <div class="box {{ item.category.tech_name }}">
                                     <a href="{{ item.image.url }}" title="{{ item.name }}" class="open-popup-link">
                                         <div class="boxInner">
                                             <img src="{{ item.image.url }}" />
