--- a/face/templates/face/index.html
+++ b/face/templates/face/index.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load thumbnail %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -82,7 +83,8 @@
                                 <div class="box {{ item.category.tech_name }}">
                                     <a href="{{ item.image.url }}" title="{{ item.name }}" class="open-popup-link">
                                         <div class="boxInner">
-                                            <img src="{{ item.image.url }}" />
+                                            {% thumbnail item.image 250x250 crop as thumb %}
+                                            <img src="{{ thumb.url }}" />
                                             <div class="titleBox">{{ item.name }}</div>
                                         </div>
                                     </a>
