--- a/face/static/face/css/style.css
+++ b/face/static/face/css/style.css
@@ -29,55 +29,55 @@ display:none;
 }
 @font-face {
 	font-family: 'OstrichSansCondensedLight';
-	src: url('Fonts/ostrich-light-webfont.eot');
-	src: url('Fonts/ostrich-light-webfont.eot?#iefix') format('embedded-opentype'),  url('Fonts/ostrich-light-webfont.woff') format('woff'),  url('Fonts/ostrich-light-webfont.ttf') format('truetype'),  url('Fonts/ostrich-light-webfont.svg#OstrichSansCondensedLight') format('svg');
+	src: url('../fonts/ostrich-light-webfont.eot');
+	src: url('../fonts/ostrich-light-webfont.eot?#iefix') format('embedded-opentype'),  url('../fonts/ostrich-light-webfont.woff') format('woff'),  url('../fonts/ostrich-light-webfont.ttf') format('truetype'),  url('../fonts/ostrich-light-webfont.svg#OstrichSansCondensedLight') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'OstrichSansMedium';
-	src: url('Fonts/ostrich-regular-webfont.eot');
-	src: url('Fonts/ostrich-regular-webfont.eot?#iefix') format('embedded-opentype'),  url('Fonts/ostrich-regular-webfont.woff') format('woff'),  url('Fonts/ostrich-regular-webfont.ttf') format('truetype'),  url('Fonts/ostrich-regular-webfont.svg#OstrichSansMedium') format('svg');
+	src: url('../fonts/ostrich-regular-webfont.eot');
+	src: url('../fonts/ostrich-regular-webfont.eot?#iefix') format('embedded-opentype'),  url('../fonts/ostrich-regular-webfont.woff') format('woff'),  url('../fonts/ostrich-regular-webfont.ttf') format('truetype'),  url('../fonts/ostrich-regular-webfont.svg#OstrichSansMedium') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'OstrichSansBold';
-	src: url('Fonts/ostrich-bold-webfont.eot');
-	src: url('Fonts/ostrich-bold-webfont.eot?#iefix') format('embedded-opentype'),  url('Fonts/ostrich-bold-webfont.woff') format('woff'),  url('Fonts/ostrich-bold-webfont.ttf') format('truetype'),  url('Fonts/ostrich-bold-webfont.svg#OstrichSansBold') format('svg');
+	src: url('../fonts/ostrich-bold-webfont.eot');
+	src: url('../fonts/ostrich-bold-webfont.eot?#iefix') format('embedded-opentype'),  url('../fonts/ostrich-bold-webfont.woff') format('woff'),  url('../fonts/ostrich-bold-webfont.ttf') format('truetype'),  url('../fonts/ostrich-bold-webfont.svg#OstrichSansBold') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'OstrichSansBlack';
-	src: url('Fonts/ostrich-black-webfont.eot');
-	src: url('Fonts/ostrich-black-webfont.eot?#iefix') format('embedded-opentype'),  url('Fonts/ostrich-black-webfont.woff') format('woff'),  url('Fonts/ostrich-black-webfont.ttf') format('truetype'),  url('Fonts/ostrich-black-webfont.svg#OstrichSansBlack') format('svg');
+	src: url('../fonts/ostrich-black-webfont.eot');
+	src: url('../fonts/ostrich-black-webfont.eot?#iefix') format('embedded-opentype'),  url('../fonts/ostrich-black-webfont.woff') format('woff'),  url('../fonts/ostrich-black-webfont.ttf') format('truetype'),  url('../fonts/ostrich-black-webfont.svg#OstrichSansBlack') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'OstrichSansRoundedMedium';
-	src: url('Fonts/ostrich-rounded-webfont.eot');
-	src: url('Fonts/ostrich-rounded-webfont.eot?#iefix') format('embedded-opentype'),  url('Fonts/ostrich-rounded-webfont.woff') format('woff'),  url('Fonts/ostrich-rounded-webfont.ttf') format('truetype'),  url('Fonts/ostrich-rounded-webfont.svg#OstrichSansRoundedMedium') format('svg');
+	src: url('../fonts/ostrich-rounded-webfont.eot');
+	src: url('../fonts/ostrich-rounded-webfont.eot?#iefix') format('embedded-opentype'),  url('../fonts/ostrich-rounded-webfont.woff') format('woff'),  url('../fonts/ostrich-rounded-webfont.ttf') format('truetype'),  url('../fonts/ostrich-rounded-webfont.svg#OstrichSansRoundedMedium') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'OstrichSansDashedMedium';
-	src: url('Fonts/ostrich-dashed-webfont.eot');
-	src: url('Fonts/ostrich-dashed-webfont.eot?#iefix') format('embedded-opentype'),  url('Fonts/ostrich-dashed-webfont.woff') format('woff'),  url('Fonts/ostrich-dashed-webfont.ttf') format('truetype'),  url('Fonts/ostrich-dashed-webfont.svg#OstrichSansDashedMedium') format('svg');
+	src: url('../fonts/ostrich-dashed-webfont.eot');
+	src: url('../fonts/ostrich-dashed-webfont.eot?#iefix') format('embedded-opentype'),  url('../fonts/ostrich-dashed-webfont.woff') format('woff'),  url('../fonts/ostrich-dashed-webfont.ttf') format('truetype'),  url('../fonts/ostrich-dashed-webfont.svg#OstrichSansDashedMedium') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'RobotoThin';
-	src: url('Fonts/Roboto-Thin.ttf') format('truetype');
+	src: url('../fonts/Roboto-Thin.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'RobotoRegular';
-	src: url('Fonts/Roboto-Regular.ttf');
+	src: url('../fonts/Roboto-Regular.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -740,4 +740,3 @@ width: 80%;
 .hide {
 	display: none;
 }
-
