Add SEO meta tags

--- a/face/templates/face/index.html
+++ b/face/templates/face/index.html
@@ -5,9 +5,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Мебельная фирма Izdiyod Abu-Said</title>
+    <title>Мебельная фирма Izdiyod Abu-Said в Ташкенте, Узбекистан</title>
     <link rel="icon" href="{% static 'face/img/favicon.ico' %}" type="image/x-icon" />
     <link rel="shortcut icon" href="{% static 'face/img/favicon.ico' %}" type="image/x-icon" />
+    <meta name="keywords" width="мебель, Ташкенте, Izdiyod, шкафы, кровати, стенки, дешево">
+    <meta name="description" width="Производство шкафов, кроватей, стенок в Ташкенте, Узбекистан">
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -45,7 +47,7 @@
             <div class="page" id="about">
                 <h3 class="page_title">О нас</h3>
                 <div class="page_content">
-                    <h3>Фирма занимается выпуском серийной мебели, как:</h3>
+                    <h3>Фирма занимается выпуском такой серийной мебели, как:</h3>
                     <ul>
                         <li><h4>Спальная мебель;</h4></li>
                         <li><h4>Стенки и горки;</h4></li>
